2014-12-19 Shahzad Muzaffar  <Shahzad.Muzaffar@cern.ch>

	* V05-04-00: Moved findDependencies.pl from the cmsdist. Update
	cmsdist/scram-project-build to use this.
	Cleanup for rootdict source dependency.

2014-12-05 Shahzad Muzaffar  <Shahzad.Muzaffar@cern.ch>

	* V05-03-31: Cleanup for ClassVersion check and print the
	scram command for updating the class version.

2014-11-27 Shahzad Muzaffar  <Shahzad.Muzaffar@cern.ch>

	* V05-03-30: Drop support for ROOTMAP BuildFile flag and always
	generate .rootmap file if supported by root external tool.

2014-11-25 Shahzad Muzaffar  <Shahzad.Muzaffar@cern.ch>

	* V05-03-29: Various features added
	- SCRAM_TEST_RUNNER_PREFIX: Runtime environment variable which
	scram can append before any unittest e.g. one use of it could be
	to run unit test under valgrind or timeout etc.
	- generate  ;lib/arch/.poisonededmplugincache for all the
	packages locallt built or deleted.
2014-10-27 Shahzad Muzaffar  <Shahzad.Muzaffar@cern.ch>

	* V05-03-28: Help message updated; some cleanup;
	Do not add biglib path if biglib is disabled in the dev area.

2014-10-13 Patrick Gartung  <gartung@fnal.gov>

	* V05-03-27: Fixed dxr.config file; passed -k gmake option and
	exit with 0 for dxr rule.

2014-10-08 Shahzad Muzaffar  <Shahzad.Muzaffar@cern.ch>

	* V05-03-26: Various fixes for OSX:
	- Fix big plugin extension for OSX arch (dylib instead of so)
	- Do not pass -L<path> for non-existing local directories

2014-10-08 David Abdurachmanov  <David.Abdurachmanov@cern.ch>

	* V05-03-25: Pass --exclude-libs to only non-osx archs.

2014-10-06 Shahzad Muzaffar  <Shahzad.Muzaffar@cern.ch>

	* V05-03-24: Drop LD_UNIT_FLAGS and just use LD_UNIT flag.

2014-10-05 Shahzad Muzaffar  <Shahzad.Muzaffar@cern.ch>

	* V05-03-23: New dxr build rule added for generating dxr indexes;
	Cleanup LD_UNIT flags for big objects for osx,fc and slc archs.

2014-09-29 Shahzad Muzaffar  <Shahzad.Muzaffar@cern.ch>
